Fix: Keeping row loader in center of screen even if Grid has horizontal scroll

--- a/grid/src/Styles/loader.scss
+++ b/grid/src/Styles/loader.scss
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 50;
 }
 .ng-loader {
     width: 100%;
